<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/group"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.chip.Chip
            android:text="@string/subreddit"
            android:textAlignment="center"
            android:textSize="20sp"
            android:id="@+id/subreddits"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/comments"
            android:text="@string/comments"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/all"
            android:text="@string/all"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/saved"
            android:text="@string/saved"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
    </com.google.android.material.chip.ChipGroup>
    <ru.skillbox.humblr.utils.LCEERecyclerView
        android:id="@+id/rec"
        app:layout_constraintTop_toBottomOf="@id/group"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>