<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/user_background_info">
    <androidx.cardview.widget.CardView
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_marginBottom="10dp"
        android:background="@color/background_card"
        android:layout_height="300dp"
        app:cardCornerRadius="20dp">
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_card"
    android:orientation="vertical"
    android:gravity="center">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        tools:src="@tools:sample/avatars"
        android:layout_width="100dp"
        android:layout_height="100dp"/>
    <ru.skillbox.humblr.utils.MTextView
        android:id="@+id/user_name"
        tools:text="@tools:sample/full_names"
        android:layout_width="wrap_content"
        app:background_color="@color/indigo"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/textSub"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"/>

    <ru.skillbox.humblr.utils.MTextView
        android:id="@+id/nick_name"
        android:textSize="15sp"
        android:textStyle="bold"
        app:background_color="@color/indigo"
        android:layout_margin="5dp"
        android:textColor="@color/textSub"
        tools:text="@tools:sample/lorem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/comments"
        tools:text="comments:666"
        android:textColor="@color/textSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/subreddits"
        android:textColor="@color/textSub"
        android:layout_width="wrap_content"
        tools:text="subreddits:24"
        android:layout_height="wrap_content"/>
</androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/friendsListButton"
        android:layout_width="300dp"
        android:layout_margin="12dp"
        android:gravity="center"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/friends_list"
        android:layout_height="40dp"/>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="300dp"
        android:id="@+id/removeSavedButton"
        android:backgroundTint="?attr/colorPrimary"
        android:layout_margin="12dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_height="40dp"
        android:text="@string/remove_saved"/>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="300dp"
        android:id="@+id/exitButton"
        android:layout_alignParentTop="true"
        android:text="@string/exitq"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_height="40dp"
        android:layout_margin="60dp"
        android:backgroundTint="#EC615B"/>
</androidx.appcompat.widget.LinearLayoutCompat>