<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
                <FrameLayout
                    android:id="@+id/fl_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    />
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/anim_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    android:visibility="invisible"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
                <androidx.cardview.widget.CardView
                    android:id="@+id/card"
                    android:layout_marginTop="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/primaryLightColor"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="250dp">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:background="@color/background_card"
                        android:layout_height="match_parent">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/avatar_view"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            tools:src="@tools:sample/avatars"
                            app:civ_border_color="@color/grey"
                            android:scaleType="centerCrop"
                            app:civ_border_width="1.5dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>
                        <ru.skillbox.humblr.utils.MTextView
                            android:id="@+id/full_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:background_color="@color/indigo"
                            tools:text="@tools:sample/full_names"
                            app:layout_constraintStart_toEndOf="@id/avatar_view"
                            app:layout_constraintTop_toTopOf="@id/avatar_view"
                            app:layout_constraintBottom_toTopOf="@id/nick_name"/>
                        <ru.skillbox.humblr.utils.MTextView
                            android:id="@+id/nick_name"
                            android:layout_width="wrap_content"
                            tools:text="@tools:sample/lorem"
                            app:background_color="@color/indigo"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:layout_constraintStart_toEndOf="@id/avatar_view"
                            app:layout_constraintTop_toBottomOf="@id/full_name"/>
                        <Button
                            android:id="@+id/write_comment"
                            android:layout_margin="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toEndOf="@id/avatar_view"
                            android:drawableLeft="@drawable/vector__10_"
                            android:text="@string/write"
                            android:textColor="?attr/colorPrimary"
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            app:layout_constraintTop_toBottomOf="@id/nick_name"/>
                        <Button
                            android:id="@+id/comments"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            app:layout_constraintStart_toEndOf="@id/avatar_view"
                            android:drawableLeft="@drawable/group_92"
                            android:textSize="12sp"
                            android:textColor="?attr/colorPrimary"
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            app:layout_constraintTop_toBottomOf="@id/write_comment" />

                        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                            android:id="@+id/subscribe"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_margin="5dp"
                            android:text="@string/subscribe"
                            android:textColor="@color/white"
                            app:backgroundTint="?attr/colorPrimary"
                            app:icon="@drawable/subscribe2"
                            app:iconGravity="end"
                            app:iconTint="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/comments"
                            tools:layout_editor_absoluteX="20dp" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:id="@+id/mini"
                    android:visibility="invisible"
                    android:gravity="bottom"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/avatar"
                        android:layout_width="40dp"
                        android:layout_marginEnd="3dp"
                        android:layout_gravity="center_vertical"
                        app:civ_border_color="@color/grey2"
                        app:civ_circle_background_color="@color/white"
                        android:layout_height="40dp"/>
                    <ru.skillbox.humblr.utils.MTextView
                        android:id="@+id/name"
                        android:textColor="@color/white"
                        tools:text="@tools:sample/full_names"
                        android:textSize="11sp"
                        app:background_color="@color/indigo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/comments_m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTint="@color/text_button"
                        app:layout_constraintStart_toEndOf="@id/avatar_view"
                        android:drawableLeft="@drawable/group_92"
                        android:textSize="11sp"
                        android:textColor="@color/text_button"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        app:layout_constraintTop_toBottomOf="@id/write_comment"
                        app:layout_constraintBottom_toBottomOf="@id/avatar_view"/>
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/write_comment_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/vector__10_"
                        android:elevation="0dp"
                        android:foregroundTint="@color/unselected"
                        android:tint="@color/unselected"
                        app:borderWidth="0dp"
                        app:backgroundTint="?attr/colorPrimary"
                        app:fabSize="mini"/>
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/subscribe_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/subscribe2"
                        android:foregroundTint="@color/unselected"
                        android:elevation="0dp"
                        app:borderWidth="0dp"
                        app:backgroundTint="?attr/colorPrimary"
                        app:fabSize="mini"/>
                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <ru.skillbox.humblr.utils.LCEERecyclerView
            android:id="@+id/recycler_view"
            tools:listitem="@layout/short_item_link"
            android:layout_width="match_parent"
            app:emptyIcon="@drawable/empty"
            app:emptyText="Oops! Nothing Here"
            app:errorIcon="@drawable/wrong"
            app:errorText="Something went wrong!"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_height="match_parent"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/read_more"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:visibility="invisible"
        android:layout_margin="20dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/read_more"
        android:textColor="@color/white"
        app:icon="@drawable/ic_baseline_chevron_right_24"
        app:iconGravity="end"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>